src/objects/dwp_cvad__Action_Audit_Detail__c.object
<CustomObject>
    <description>Stores the details of the audited action.</description>
    <fields>
        <fullName>dwp_cvad__action_audit_detail_content__c</fullName>
        <description>Contains the action audit detail content.</description>
        <inlineHelpText>Contains the action audit detail content.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_detail_content_format__c</fullName>
        <defaultValue>&apos;HTML&apos;</defaultValue>
        <description>Specifies the action audit detail contact format.</description>
        <inlineHelpText>Specifies the action audit detail contact format.</inlineHelpText>
        <label>Content Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_detail_display_order__c</fullName>
        <description>Specifies the order in which the action audit detail will be displayed within it´s display type grouping.</description>
        <inlineHelpText>Specifies the order in which the action audit detail will be displayed within it´s display type grouping.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_detail_display_title__c</fullName>
        <description>Specifies the link´s text used on the action audit details with type Link.</description>
        <inlineHelpText>Specifies the link´s text used on the action audit details with type Link.</inlineHelpText>
        <label>Display Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_detail_display_type__c</fullName>
        <description>Specifies if the action audit detail content will be displayed embedded or in a pop-up window.</description>
        <inlineHelpText>Specifies if the action audit detail content will be displayed embedded or in a pop-up window.</inlineHelpText>
        <label>Display Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Embedded</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_id__c</fullName> 
        <description>Relation with the action audited.</description>
        <inlineHelpText>Relation with the action audited.</inlineHelpText>
        <label>Action Audit</label>
        <referenceTo>dwp_cvad__Action_Audit__c</referenceTo>
        <relationshipLabel>Action Audit Details</relationshipLabel>
        <relationshipName>Action_Audit_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Action Audit Detail</label>
    <nameField>
        <displayFormat>AAD-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Audit Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dwp_cvad__Title_Required</fullName>
        <active>true</active>
        <description>If the action audit detail display type is Link, the title is required.</description>
        <errorConditionFormula>IF(AND( ISPICKVAL( dwp_cvad__action_audit_detail_display_type__c , &apos;Link&apos;),ISBLANK( dwp_cvad__action_audit_detail_display_title__c ) ),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_cvad__action_audit_detail_display_title__c</errorDisplayField>
        <errorMessage>Please, enter a title for the action audit detail link.</errorMessage>
    </validationRules>
</CustomObject>